<resources>
    <string name="app_name">Labo Notes </string>
    <string name="sticky_notes_description">sticky notes</string>
    <string name="account_title">Account</string>
    <string name="notes_title">Notes</string>
    <string name="add_note_title">Add note</string>
    <string name="add_category_title">Add category</string>
    <string name="enter_your_note_hint">Enter your note</string>
    <string name="title_hint">Title</string>
    <string name="done_button">DONE</string>
    <string name="user_image_description">user_image</string>
    <string name="username_hint">username</string>
    <string name="enter_button">enter</string>
    <string name="login_token">logged</string>
    <string name="category_text_view">Category:</string>
    <string name="notes_count_text_view">Notes count:</string>
    <string name="categories_text_view">Categories:</string>
</resources>
