<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account_section"
            android:icon="@drawable/ic_account_24dp"
            android:title="@string/account_title" />
        <item
            android:id="@+id/notes_section"
            android:icon="@drawable/ic_note_24dp"
            android:title="@string/notes_title" />
        <item
            android:id="@+id/add_note_section"
            android:icon="@drawable/ic_add_note_24dp"
            android:title="@string/add_note_title" />
        <item
            android:id="@+id/add_category_section"
            android:icon="@drawable/ic_add_category_24dp"
            android:title="@string/add_category_title" />
        <item android:title="leave">
            <menu>
                <item
                    android:id="@+id/logout_section"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="Log out" />
            </menu>
        </item>
    </group>

</menu>